[MD settings] fix filter on return from sub-page

This CL resets the filter_ member in the site data handler (c++) so that
the filter will be reapplied when revisiting the page.

Bug: 820816
Change-Id: Id710d8f6b9ec35f8ee69088dbbd8d8d9b3691c38
Reviewed-on: https://chromium-review.googlesource.com/964986
Reviewed-by: Tommy Li <tommycli@chromium.org>
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543555}
Former-commit-id: 2c551613c10ae4b974465ee58f9b690c1cbab12d